Gnome-shell fixes
- Fix big padding on notification button
- Fix invisible close button on notifications list

--- a/gnome-shell/_common.scss
+++ b/gnome-shell/_common.scss
@@ -1090,6 +1090,9 @@ StScrollBar {
           border-radius: 5px;
         }
 
+        .message-close-button {
+          color: $fg_color;
+        }
           .message-icon-bin {
             padding: 10px 3px 10px 10px;
             &:rtl { padding: 10px 10px 10px 3px; }
@@ -1616,7 +1619,7 @@ StScrollBar {
       spacing: 1px;
     }
     .notification-button {
-      padding: 4px 4px 5px;
+      padding: 0px;
       background-color: transparentize($bg_color, 0.1);
       &:first-child { border-radius: 0 0 0 3px; }
       &:last-child { border-radius: 0 0 3px 0; }
